--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+    "axios": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
